--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,7 @@ set(CMAKE_CXX_STANDARD_REQUIRED True)
 # Add definitions and compiler options
 add_definitions(-DOPENFHE_VERSION=1.0.3 -DMATHBACKEND=4)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Werror -Wno-parentheses -fopenmp")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O2 -w -ansi -D_POSIX_SOURCE -D__NBISLE__ -fpermissive -fPIC")
 
 # Include directories
 include_directories(
@@ -19,8 +20,16 @@ include_directories(
 
 # Source files
 add_executable(FingerprintMatching
-	  src/main.cpp
+# src/main.cpp
     src/openFHE_wrapper.cpp
+    src/lib_bozorth3.cpp
+    src/lib_bz_alloc.cpp
+    src/lib_bz_drvrs.cpp
+    src/lib_bz_gbls.cpp
+    src/lib_bz_io.cpp
+    src/lib_bz_sort.cpp
+    src/usage.cpp
+    src/bozorth3.cpp
  # add other source files here
 )
 
